--- a/mcp-memory/config.yaml
+++ b/mcp-memory/config.yaml
@@ -1,2 +1,5 @@
 # Local Memory MCP Server Configuration
 # Edit this file to customize behavior
+
+database:
+  path: /home/devuser/project/mcp-memory/memory.db
