--- a/data/personal_development/practices.toml
+++ b/data/personal_development/practices.toml
@@ -1,21 +1,21 @@
 # Personal Development Practices
 
 [[items]]
-name = "Taichi & Qigong"
-description = "Regular practice for body awareness and energy cultivation."
-years = "2015–present"
-
-[[items]]
 name = "Enneagram"
-description = "Personality framework for self-understanding and interpersonal dynamics."
+description = "Personality framework for self-understanding and interpersonal dynamics. A powerful tool for recognizing patterns and navigating relationships with greater awareness."
 years = "2018–present"
 
 [[items]]
 name = "Family Constellations"
-description = "Systemic approach to understanding family dynamics and patterns."
+description = "Systemic approach to understanding family dynamics and relational patterns. Certified training with Svagito Liebermeister (2021), continuing practice and exploration."
 years = "2019–present"
 
 [[items]]
-name = "Facilitation"
-description = "Group facilitation skills for workshops and team dynamics."
-years = "2020–present"
+name = "Taichi & Qigong"
+description = "Regular practice for body awareness, energy cultivation, and mind-body integration. University Expert certification from INEF Madrid (2022)."
+years = "2015–present"
+
+[[items]]
+name = "Living Abroad & Cross-Cultural Learning"
+description = "Extended periods living in France, Germany, Mayotte, and China. Learning who I am by contrast with other cultures, building adaptability, and cultivating deep appreciation for diverse perspectives on life."
+years = "2008–present"
