--- a/data/teaching/experience.toml
+++ b/data/teaching/experience.toml
@@ -1,6 +1,16 @@
 # Teaching Experience
 
 [[items]]
+role = "Global Coordination"
+company = "FOSC"
+location = "Madrid, Spain"
+years = "2018–2021"
+responsibilities = [
+  "Coordinated a multi-project environment with effort estimation, resource allocation, and conflict resolution.",
+  "Led activity planning, definition, and operational support while engaging stakeholders."
+]
+
+[[items]]
 role = "Music Teacher"
 company = "French Government"
 location = "Mayotte, Africa"
