--- a/data/engineering/education.toml
+++ b/data/engineering/education.toml
@@ -3,13 +3,19 @@
 [[items]]
 title = "Engineering Degree in Bioinformatics and Modelling"
 institution = "INSA de Lyon"
-location = "Lyon"
+location = "Lyon, France"
 years = "2008–2014"
 details = [
-  "Master-equivalent five-year program spanning biology, computer science, mathematics, modelling, and applied research.",
-  "Bioinformatics & Modelling cycle covering linear algebra, PDEs, dynamical systems, agent-based models, and introductory AI.",
-  "Biology modules in cell biology, genetics, proteomics, phylogenetics, crystallography, drug design, MRI, and COPASI network modelling.",
-  "Computer science toolkit across C/C++, Python, R, MATLAB, MySQL, KNIME, computational biology, UI design, servers, and FIJI image processing.",
-  "Statistics training from ANOVA and PCA to Bayesian methods, Monte Carlo techniques, and regression.",
-  "Supplementary modules in cryptography, core engineering fundamentals, and the EURINSA international program."
+  "Master-equivalent five-year program (Grande École).",
+  "Specialization in biology, computer science, mathematics, and modelling.",
+  "EURINSA international program with 50% European students."
+]
+
+[[items]]
+title = "2nd Prize - Madrid Mathematics Problem Solving Contest"
+institution = "Regional Competition"
+location = "Madrid, Spain"
+years = "2004"
+details = [
+  "Competed against all participating schools in Madrid."
 ]
