Rehaul of Personal develompent. Bubles welcomed

--- a/data/personal_development/links.toml
+++ b/data/personal_development/links.toml
@@ -1,6 +1,6 @@
 # Personal Development Links
 
 [[items]]
-label = "Practice log"
-description = "Notes on Taichi, Qigong, and facilitation experiences."
-url = "#"
+label = "El Camino de Santi (Podcast)"
+description = "Podcast exploring personal development, philosophy, and life experiences."
+url = "https://open.spotify.com/show/0ItZvv53G2Rf6k7UpTck4P?si=71188b5704ed4e0e"
