--- a/data/personal_development/practices.toml
+++ b/data/personal_development/practices.toml
@@ -2,20 +2,24 @@
 
 [[items]]
 name = "Enneagram"
-description = "Personality framework for self-understanding and interpersonal dynamics. A powerful tool for recognizing patterns and navigating relationships with greater awareness."
-years = "2018–present"
+description = "Personality framework for self-understanding and interpersonal dynamics."
+years = "2015–present"
+anecdotes = ""
 
 [[items]]
 name = "Family Constellations"
-description = "Systemic approach to understanding family dynamics and relational patterns. Certified training with Svagito Liebermeister (2021), continuing practice and exploration."
-years = "2019–present"
+description = "Systemic approach to understanding family dynamics and relational patterns."
+years = "2020–present"
+anecdotes = ""
 
 [[items]]
 name = "Taichi & Qigong"
-description = "Regular practice for body awareness, energy cultivation, and mind-body integration. University Expert certification from INEF Madrid (2022)."
-years = "2015–present"
+description = "Regular practice for body awareness, energy cultivation, and mind-body integration."
+years = "2021–present"
+anecdotes = ""
 
 [[items]]
 name = "Living Abroad & Cross-Cultural Learning"
-description = "Extended periods living in France, Germany, Mayotte, and China. Learning who I am by contrast with other cultures, building adaptability, and cultivating deep appreciation for diverse perspectives on life."
-years = "2008–present"
+description = "Extended periods living in France, Germany, Mayotte, and China. Learning who I am by contrast with other cultures."
+years = "2007–present"
+anecdotes = ""
