Bubble colors and secondary content

--- a/data/personal_development/practices.toml
+++ b/data/personal_development/practices.toml
@@ -4,22 +4,22 @@
 name = "Enneagram"
 description = "Personality framework for self-understanding and interpersonal dynamics."
 years = "2015–present"
-anecdotes = ""
+anecdotes = "What have the numbers 1, 3, 7 and 9 to do with human psychology?"
 
 [[items]]
 name = "Family Constellations"
 description = "Systemic approach to understanding family dynamics and relational patterns."
 years = "2020–present"
-anecdotes = ""
+anecdotes = "Beyond there is always love. If you don't see it yet, dig deeper."
 
 [[items]]
 name = "Taichi & Qigong"
 description = "Regular practice for body awareness, energy cultivation, and mind-body integration."
 years = "2021–present"
-anecdotes = ""
+anecdotes = "Is there energy? There isn't but if you start feeling something, then I'll tell you."
 
 [[items]]
 name = "Living Abroad & Cross-Cultural Learning"
-description = "Extended periods living in France, Germany, Mayotte, and China. Learning who I am by contrast with other cultures."
+description = "Extended periods living in France, Germany, Mayotte, and China. Learning and building who I am by contrast with other cultures."
 years = "2007–present"
-anecdotes = ""
+anecdotes = "I used to think that Africa's problem was European powers... then I went there and learnt that reality is always a layer or two more complex."
