Some links modified

--- a/data/teaching/links.toml
+++ b/data/teaching/links.toml
@@ -1,6 +1,6 @@
 # Teaching Links
 
 [[items]]
-label = "Teaching philosophy"
-description = "Notes on pedagogy and facilitation approach."
-url = "#"
+label = "The chahui and the magic"
+description = "You don't do the teaching, you provide excuses for someone to learn. Or sometimes you just enjoy."
+url = "https://lasaventurasdelptitguisanti.wordpress.com/2015/12/19/the-chahui-and-the-magic/"
