--- a/data/personal_development/links.toml
+++ b/data/personal_development/links.toml
@@ -4,3 +4,8 @@
 label = "El Camino de Santi (Podcast)"
 description = "Podcast exploring personal development, philosophy, and life experiences."
 url = "https://open.spotify.com/show/0ItZvv53G2Rf6k7UpTck4P?si=71188b5704ed4e0e"
+
+[[items]]
+label = "Las aventuras del p'tit guisanti"
+description = "Sometimes I share profound thoughts in my blog."
+url = "https://lasaventurasdelptitguisanti.wordpress.com/2025/07/31/love-and-fear-a-philosophical-exploration/"
