Added a books section in complementary, with new book cards. Fixed bububles hovering. Content changes in engineering-new ai tools category created

--- a/data/engineering/technical_skills.toml
+++ b/data/engineering/technical_skills.toml
@@ -6,7 +6,11 @@ skills = ["Java", "C", "C++", "Python", "R", "MATLAB", "MySQL", "Git"]
 
 [[categories]]
 name = "Specialized Software"
-skills = ["FIJI (Image Processing)", "KNIME (Data Mining)", "COPASI (Biological Network Modeling)", "ComfyUI", "OpenCode"]
+skills = ["FIJI (Image Processing)", "KNIME (Data Mining)", "COPASI (Biological Network Modeling)"]
+
+[[categories]]
+name = "AI Tools"
+skills = ["ComfyUI", "OpenCode", "Claude", "MCPs", "Codex"]
 
 [[categories]]
 name = "Mathematical Modeling"
