--- a/data/other_interests/links.toml
+++ b/data/other_interests/links.toml
@@ -1,6 +1,2 @@
 # Other Interests Links
-
-[[items]]
-label = "Goodreads"
-description = "Books I've read and what I'm currently reading."
-url = "https://www.goodreads.com"
+# Reserved for future links
