Revise poem text in enneagram.toml
Updated poem text for Enneagram Type One.

--- a/data/astrology/enneagram.toml
+++ b/data/astrology/enneagram.toml
@@ -2,7 +2,7 @@
 
 [poem]
 text = """Come as you are
-for you are a pure expression of love
+for you are Love and Love is you
 and the world shines with and within you
 as the perfect note in the symphony of Existence.
 You are the Skill itself, the Tool itself,
