Update baseURL in config.toml
to my brand new santimj.com :D :D

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://santimator.github.io/santi-info/"
+baseURL = "https://santimj.com/"
 languageCode = "en"
 title = "Santiago Moreno"
 # theme = ""  # Empty - using custom layouts
