Update title in config.toml to full name

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://santimj.com/"
 languageCode = "en"
-title = "Santiago Moreno"
+title = "Santiago Moreno Jaureguízar"
 # theme = ""  # Empty - using custom layouts
 
 [menu]
